logging/master/kibana/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: logging
  labels:
    app: kibana
spec:
  type: NodePort
  selector:
    app: kibana
  ports:
    - port: 5601
      nodePort: 30008
      name: http
      targetPort: 5601
      protocol: TCP
