logging/master/kibana/ingress.yml
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
#    kubernetes.io/tls-acme: "true"
#    ingress.kubernetes.io/force-ssl-redirect: "true"
  name: kibana
  namespace: logging 

spec:
  rules:
#    http:
#      paths:
#      - backend:
#          serviceName: kibana
#          servicePort: 5601
#        path: /
 # tls:
 # - hosts:
 #   - kibana.itsecforu.ru
 #   secretName: ingress-secret   // This can be created prior if using custom certs
  - http:
      paths:
      - path: /kibana
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
